[tool.poetry]
name = "har2document-django"
version = "v0.1.2"
description = "Generate API document from HAR file with Django"
authors = ["Jeongseop Lim <jseoplim@gmail.com>"]
maintainers = ["Jeongseop Lim <jseoplim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jseoplim/har2document-django"
license = "MIT"
packages = [
    { include = "har2document_django", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
django = ">=3.2 <5.0"
har2document = {git = "https://github.com/8percent/har2document.git", rev = "v0.1.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.13.2"
tox = "^4.11.4"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Lint Configurations
[tool.isort]
profile = "black"
line_length = 88

[tool.black]
preview = true
line-length = 88
target-version = ['py310', 'py311']

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = [
    "tests",
]
